# winsparkle

./: .gitignore  CMakeLists.txt  setup-cmake-msvc.bat  setup-cmake-vs2010.bat  setup-cmake-vs2012.bat  setup-cmake-vs2013.bat  setup-cmake-vs2015.bat  setup-vs2010.bat  setup-vs2013.bat
CMake/expat/: CMakeLists.txt
CMake/wxWidgets/: CMakeLists.txt  msvc_precomp_headers.cmake  stdafx.h  wxprec.cpp  wxprec.h
cmake/wxWidgets/: CMakeLists.txt  msvc_precomp_headers.cmake
examples/psdk/: CMakeLists.txt
include/: winsparkle.h
src/: CMakeLists.txt  winsparkle.manifest
